--- a/404.md
+++ b/404.md
@@ -1,6 +1,7 @@
 ---
 layout: page
 title: Not Found
+permalink: /404.html
 ---
 
 The page you are looking for is not here. Maybe it was but I have removed it. Most likely it was intentionally. If you think I made a mistake, please tell me.
